Added Astronautics to acknowledgements.

--- a/main.tex
+++ b/main.tex
@@ -840,6 +840,7 @@
  
 \subsection*{Acknowledgments}
 This work was supported in part by a grant from the Interdisciplinary Cyber Research Center at Tel Aviv University.
+The authors would like to thank Astronautics C.A. LTD. sharing their equipment and expert knowledge.
 
 \bibliographystyle{splncs04.bst}
 \bibliography{biblio} 
